--- a/QuickLookStephenProject/Info.plist
+++ b/QuickLookStephenProject/Info.plist
@@ -54,7 +54,7 @@
 	<key>CFPlugInUnloadFunction</key>
 	<string></string>
 	<key>QLNeedsToBeRunInMainThread</key>
-	<false/>
+	<true/>
 	<key>QLPreviewHeight</key>
 	<real>600</real>
 	<key>QLPreviewWidth</key>
