--- a/QuickLookStephenProject/Info.plist
+++ b/QuickLookStephenProject/Info.plist
@@ -54,9 +54,9 @@
 	<key>CFPlugInUnloadFunction</key>
 	<string></string>
 	<key>NSHumanReadableCopyright</key>
-	<string>Copyright © 2012 Duncan Robertson. All rights reserved.</string>
+	<string>Copyright © 2013 Duncan Robertson. All rights reserved.</string>
 	<key>QLNeedsToBeRunInMainThread</key>
-	<false/>
+	<true/>
 	<key>QLPreviewHeight</key>
 	<real>600</real>
 	<key>QLPreviewWidth</key>
